--- a/frontend/scouts.html
+++ b/frontend/scouts.html
@@ -8,11 +8,13 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/common.js"></script>
-    <script src="js/lister.js"></script>
-    <script src="js/fiche.js"></script>
-    <script src="js/recherche.js"></script>
-    <script src="js/inscrire.js"></script>
-    <script src="js/roles_patrouilles.js"></script>
+    <script src="js/louis-lister.js"></script>
+    <script src="js/louis-fiche.js"></script>
+    <script src="js/logan_et_louis-recherche.js"></script>
+    <script src="js/logan-inscrire.js"></script>
+    <script src="js/wassim-patrouilles.js"></script>
+    <script src="js/wassim-roles.js"></script>
+    <script src="js/logan-supprimer.js"></script>
 </head>
 <body>
 <header>
