--- a/frontend/scouts.html
+++ b/frontend/scouts.html
@@ -33,6 +33,9 @@
             <li>
                 <button onclick="afficherCarte('listing'),filtreur()">Listing</button>
             </li>
+            <li>
+                <button onclick="afficherCarte('badges')">Badges</button>
+            </li>
         </ul>
     </header>
     <main>
@@ -99,6 +102,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="card" id="badges" style="display:none">
+                <div class="card-heading">
+
+                </div>
+                <div class="card-body">
+                    <h2 class="title">Badges</h2>
+                    <div class="badges">
+
+                    </div>
+                </div>
+            </div>
             </div>
             <div id="existeDeja" class="backgound" style="display: none;">
                 <br>
