--- a/frontend/scouts.html
+++ b/frontend/scouts.html
@@ -17,6 +17,7 @@
     <script src="js/suppression_scout.js"></script>
     <script src="js/patrouilles.js"></script>
     <script src="js/badges.js"></script>
+    <script src="js/filtrer.js"></script>
 </head>
 <body>
 <header>
@@ -29,7 +30,7 @@
             <button onclick="afficherCarte('inscription')">Inscription</button>
         </li>
         <li>
-            <button onclick="afficherCarte('listing')">Listing</button>
+            <button onclick="afficherCarte('listing'),filtreur()">Listing</button>
         </li>
         <li>
             <button onclick="afficherCarte('patrouilles')">Patrouilles</button>
@@ -82,6 +83,8 @@
                 </div>
                 <div class="card-body">
                     <h2 class="title">Listing</h2>
+                    <h3 class="Filtre"> Filtre</h3>
+                    <div id="filtreur"></div>
                     <div class="listing">
 
                     </div>
@@ -120,6 +123,7 @@
                     </div>
                 </div>
             </div>
+            <div id="nombreDeScout"></div>
         </div>
     </div>
 </main>
