--- a/frontend/scouts.html
+++ b/frontend/scouts.html
@@ -17,6 +17,7 @@
     <script src="js/suppression_scout.js"></script>
     <script src="js/patrouilles.js"></script>
     <script src="js/badges.js"></script>
+    <script src="js/nombre_scouts.js"></script>
     <script src="js/filtrer.js"></script>
 </head>
 <body>
@@ -83,8 +84,10 @@
                 </div>
                 <div class="card-body">
                     <h2 class="title">Listing</h2>
-                    <h3 class="Filtre"> Filtre</h3>
-                    <div id="filtreur"></div>
+                    <h3 class="filtre">Filtre</h3>
+                    <div id="filtreur">
+
+                    </div>
                     <div class="listing">
 
                     </div>
@@ -123,7 +126,9 @@
                     </div>
                 </div>
             </div>
-            <div id="nombreDeScout"></div>
+            <div id="nombreDeScout">
+
+            </div>
         </div>
     </div>
 </main>
